--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,8 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_STANDARDS_TREE=vnd
+API_SUBTYPE=steamhub
+API_PREFIX=api
+API_VERSION=v2
