--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "dingo/api": "v2.0.0-alpha2",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
-        "dingo/api": "v2.0.0-alpha2"
+        "tymon/jwt-auth": "^1.0.0-rc"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
