--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "predis/predis": "^1.1",
         "tymon/jwt-auth": "^1.0.0-rc"
     },
     "require-dev": {
