chore: create the querying of game list.

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=SteamHub
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_VERSION=V3
+APP_DEBUG=false
 APP_URL=http://localhost
+APP_WEBSITE_URL=https://steamhub.cn
+APP_GITHUB_URL=https://github.com/InGaming
 
 LOG_CHANNEL=stack
 
@@ -14,7 +17,7 @@ DB_USERNAME=homestead
 DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
