--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,7 @@ DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
+CACHE_EXPIRE=5
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
