--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ DB_PASSWORD=secret
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
 CACHE_EXPIRE=5
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
