--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,11 @@
         "fideloper/proxy": "^4.0",
         "jaeger/querylist": "^4.0",
         "laravel/framework": "5.7.*",
+        "laravel/horizon": "^2.0",
         "laravel/telescope": "^1.0",
         "laravel/tinker": "^1.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "symfony/psr-http-message-bridge": "^1.1"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
