--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+RESPONSE_CACHE_ENABLED=true
+RESPONSE_CACHE_LIFETIME=5
+RESPONSE_CACHE_DRIVER=redis
