--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/telescope": "^1.0",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
+        "spatie/laravel-responsecache": "^4.4",
         "symfony/psr-http-message-bridge": "^1.1"
     },
     "require-dev": {
