--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/horizon": "^2.0",
         "laravel/telescope": "^1.0",
         "laravel/tinker": "^1.0",
+        "mews/purifier": "^2.1",
         "predis/predis": "^1.1",
         "spatie/laravel-responsecache": "^4.4",
         "symfony/psr-http-message-bridge": "^1.1"
