--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "barryvdh/laravel-cors": "^0.11.2",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "jaeger/querylist": "^4.0",
         "laravel/framework": "5.7.*",
