--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=homestead
+DB_DATABASE_2=homestead_2
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
