feat: add swoole support

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ APP_URL=http://localhost
 APP_WEBSITE_URL=https://steamhub.cn
 APP_GITHUB_URL=https://github.com/InGaming
 
+SWOOLE_HTTP_PORT=1000
+SWOOLE_HOT_RELOAD_ENABLE=true
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
