--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "mews/purifier": "^2.1",
         "predis/predis": "^1.1",
         "spatie/laravel-responsecache": "^4.4",
+        "swooletw/laravel-swoole": "^2.6",
         "symfony/psr-http-message-bridge": "^1.1"
     },
     "require-dev": {
